<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_motorcycle"
            android:title="@string/navigation_main" />
        <item
            android:id="@+id/nav_old_rides"
            android:icon="@drawable/ic_insert_chart"
            android:title="@string/navigation_old_rides" />
        <item
            android:id="@+id/nav_emergency_contact"
            android:icon="@drawable/ic_person_add"
            android:title="@string/navigation_emergency_contact" />

        <!--
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/navigation_settings" />
        -->

    </group>

    <!--
    <item android:title="@string/navigation_sub_items">
        <menu>
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_1" />
            <item
                android:icon="@drawable/ic_dashboard"
                android:title="@string/navigation_dummy_item_2" />
        </menu>
    </item>
    -->

</menu>
